--- a/web/sports-centers-2022/pom.xml
+++ b/web/sports-centers-2022/pom.xml
@@ -13,13 +13,13 @@
         <dependency>
         <groupId>com.sparkjava</groupId>
         <artifactId>spark-core</artifactId>
-        <version>2.5</version>
+        <version>2.9.4</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.9.1</version>
         </dependency>
 
         <dependency>
@@ -33,6 +33,13 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
 
     </dependencies>
 
